# shoptalk

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md  test_check.txt
app/: models.py
docs/: ADDRESS_COMPLETION_LABEL.md  ADD_APPROVAL_WAIT_LABEL_HELPER.md  ADD_CATALOG_SEARCH_PHRASE_HELPER.md  ADD_CHECKOUT_BLOCKER_LABEL_HELPER.md  ADD_CONVERSATION_AGE_BUCKET_HELPER.md  ADD_CUSTOMER_NAME_CLEANER.md  ADD_CUSTOMER_REORDER_HINT_HELPER.md  ADD_DELIVERY_AREA_LABEL_HELPER.md  ADD_DELIVERY_SLOT_PRESSURE_HELPER.md  ADD_DISCOUNT_GUARD_LABEL_HELPER.md  ADD_INVENTORY_GAP_LABEL_HELPER.md  ADD_LEAD_REPLY_WINDOW_HELPER.md  ADD_MESSAGE_FOLLOWUP_FLAG_HELPER.md  ADD_ORDER_QUANTITY_LABEL_HELPER.md  ADD_ORDER_VALUE_BAND_HELPER.md  ADD_PAYMENT_DELAY_REASON_HELPER.md  ADD_PAYMENT_METHOD_HINT_HELPER.md  ADD_REFUND_WINDOW_LABEL_HELPER.md  ADD_REPLY_QUEUE_LABEL_HELPER.md  ADD_SELLER_NOTE_QUALITY_HELPER.md  ADD_SELLER_RESPONSE_BADGE_HELPER.md  API.md  API_OVERVIEW.md  APPROVAL_BOTTLENECK_LABEL.md  APPROVAL_FRICTION_LABEL.md  ARCHITECTURE.md  BASKET_HEALTH_LABEL.md  BATCH_PREP_LABEL.md  BETA_CHECKLIST.md  BETA_SIGNAL_PLAN.md  BULK_ORDER_LABEL.md  BUSINESS_KPIS.md  BUYER_INTENT_HELPER.md  CART_RECOVERY_LABEL.md  CART_SIZE_LABEL.md  CATALOG_CLEANUP_LABEL.md  CATALOG_GAP_PROMPT_HELPER.md  CATALOG_MATCH_LABEL.md  CATALOG_PHOTO_LABEL.md  CHANGELOG.md  (+129 more)
src/: __init__.py  config.py  exceptions.py
tests/: test_action_plan.py  test_adapter_errors.py  test_address_preview.py  (+522 more)
(+573 files in other folders)
